--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"prettier-plugin-astro": "^0.14.1"
 	},
 	"dependencies": {
+		"@astrojs/cloudflare": "^12.5.4",
 		"@tinacms/cli": "^1.7.0",
 		"tinacms": "^2.5.2"
 	}
