--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
 	"scripts": {
 		"dev": "npx tinacms dev -c 'astro dev'",
 		"start": "astro dev",
-		"build": "tinacms build && astro build",
+		"build": "tinacms build --skip-cloud-checks && astro build",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
 	"devDependencies": {
-		"@astrojs/rss": "^4.0.10",
-		"@astrojs/sitemap": "^3.2.1",
-		"astro": "^5.0.5",
-		"prettier": "^3.3.3",
+		"@astrojs/rss": "^4.0.12",
+		"@astrojs/sitemap": "^3.4.1",
+		"astro": "^5.9.2",
+		"prettier": "^3.5.3",
 		"prettier-plugin-astro": "^0.14.1"
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.5.4",
-		"@tinacms/cli": "^1.7.0",
-		"tinacms": "^2.5.2"
+		"@tinacms/cli": "^1.9.8",
+		"tinacms": "^2.7.8"
 	}
 }
